Fix some lint warnings and clean up layout
Change-Id: Id2ff43fe893725181af98ba8b4663266a6b495c2
Signed-off-by: Rob Beane <robbeane@gmail.com>

Conflicts:
	res/layout/license_layout.xml